# processkit-py

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CLAUDE.local.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  book.toml  cliff.toml  compose.yaml  conftest.py  deny.toml  justfile  mkdocs.yml  pyproject.toml  release-token-bypass.md  rust-toolchain.toml  stubtest-allowlist.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-token-bypass.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: _build-dists.yml  canary-next.yml  canary.yml  ci.yml  codeql.yml  docs.yml  nightly-hardening.yml  release.yml  test-release.yml
benchmarks/: README.md  __init__.py  _shared.py  test_output_all.py  test_process_group.py  test_spawn_capture.py  test_streaming_throughput.py
docker/: Dockerfile  Dockerfile.musl
docs/: README.md  SUMMARY.md  api-reference.md  cli.md  commands.md  cookbook.md  dotnet.md  event-loops.md  internals.md  migrating.md  performance.md  pipelines.md  platforms.md  process-groups.md  python-wrapper.md  rust-crate.md  sandboxing.md  streaming.md  supervision.md  testing.md  timeouts-and-cancellation.md  troubleshooting.md
docs/overrides/: extra.css  main.html
examples/: 01_no_orphan_guarantee.py  02_wait_for_server.py  03_supervise_until_healthy.py  04_sandbox_resource_limits.py  README.md
scripts/: cargo-test-windows.ps1  check-env.ps1  check-env.sh  check_docs_links.py  ci-privileged-check.sh  ci-privileged-guard.py  gen_api_reference.py  smoke.py
scripts/release/: __init__.py  cargo_lock.py  changelog.py
src/: batch.rs  cancellation.rs  cli.rs  command.rs  convert.rs  errors.rs  group.rs  lib.rs  logging.rs  result.rs  runner.rs  running.rs  runtime.rs  supervisor.rs
src/processkit/: __init__.py  __main__.py  _aio.py  _processkit.pyi  _protocols.py  _runner.py  _types.py  pytest_plugin.py  testing.py
src/processkit/_cli/: __init__.py  doctor.py  exit_codes.py  parser.py  run.py  supervise.py
tests/: _docs_snippets.py  _liveness.py  _programs.py  _typing_pins.py  conftest.py  test_api_reference.py  test_api_surface.py  test_async.py  test_async_lifecycle.py  test_batch.py  test_ci_privileged_guard.py  test_cli_client.py  test_cli_main.py  test_command.py  test_docs_links.py  test_docs_snippets.py  test_event_loops.py  test_examples.py  test_exceptions.py  test_extended.py  test_fork_safety.py  test_hardening.py  test_higher_level.py  test_import.py  test_inspection_fixes.py  test_logging.py  test_new_api.py  test_pipelines.py  test_process_group.py  test_pytest_plugin.py  test_readiness.py  test_release_scripts.py  test_runner_seam.py  test_streaming.py  test_supervisor.py  test_threading.py
tests/property/: __init__.py  conftest.py  test_argv_env_roundtrip.py  test_numeric_validation.py  test_output_limit.py  test_signals.py  test_wait_for_http.py  test_wait_for_line.py
theme/: custom.css  head.hbs  nav-links.js
