[package]
name = "processkit"
version = "1.0.0"
edition = "2021"
description = "PyO3 binding crate for the processkit Python package (compiled into wheels)"
license = "MIT"
repository = "https://github.com/ZelAnton/processkit-py"
# This crate is the PyO3 glue compiled into the Python wheels — it is NOT a
# crates.io artifact. The published Rust crate is `processkit` itself (which we
# depend on); never publish this same-named binding over it.
publish = false

[lib]
# The compiled extension is imported as `processkit._processkit` from Python.
name = "_processkit"
crate-type = ["cdylib"]

# `extension-module` is declared as an optional Cargo feature so that `cargo test`
# and `cargo check` work without it (the feature makes the crate non-linkable as a
# regular dylib, which breaks unit tests that link against the extension).
# maturin activates it when building for Python via [tool.maturin] features in pyproject.toml.
[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
# abi3-py310: build once, run on CPython 3.10+ (3.9 is EOL; matches requires-python in pyproject.toml).
pyo3 = { version = "0.29", features = ["abi3-py310"] }
# Async bridge (tokio ↔ asyncio). The `tokio-runtime` feature gives a managed
# runtime we reuse for BOTH the sync surface (`block_on`) and the async surface
# (`future_into_py`), so the binding owns exactly one runtime. Tracks pyo3 0.29.
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
# The Rust core. Exact pin — the binding tracks API/behaviour churn deliberately,
# not transitively (a 2.0.0 was published then yanked upstream; pin guards us).
# `limits` (whole-tree resource caps) implies `stats` (resource measurement);
# both back the sandboxing/observability surface. `record` enables the
# `RecordReplayRunner` test double (pulls serde/serde_json for the cassette).
processkit = { version = "=1.0.1", features = ["limits", "record"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
