[package]
name = "processkit-py"
version = "1.1.0"
edition = "2021"
description = "PyO3 binding crate for the processkit Python package (compiled into wheels)"
license = "MIT"
repository = "https://github.com/ZelAnton/processkit-py"
# This crate is the PyO3 glue compiled into the Python wheels ŌĆö it is NOT a
# crates.io artifact. The published Rust crate is `processkit` itself (which we
# depend on). Named `processkit-py` (not `processkit`) so the two never share a
# package name in Cargo.lock ŌĆö the disambiguation the release workflow's
# Cargo.lock-sync step previously needed (a negative-lookahead regex matching
# the local, sourceless entry among two same-named ones) is now structural: an
# ordinary name match is unambiguous.
publish = false

[lib]
# The compiled extension is imported as `processkit._processkit` from Python.
name = "_processkit"
crate-type = ["cdylib"]

# `extension-module` is declared as an optional Cargo feature so that `cargo test`
# and `cargo check` work without it (the feature makes the crate non-linkable as a
# regular dylib, which breaks unit tests that link against the extension).
# maturin activates it when building for Python via [tool.maturin] features in pyproject.toml.
[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
# abi3-py310: build once, run on CPython 3.10+ (3.9 is EOL; matches requires-python in pyproject.toml).
pyo3 = { version = "0.29", features = ["abi3-py310"] }
# Async bridge (tokio Ōåö asyncio). The `tokio-runtime` feature gives a managed
# runtime we reuse for BOTH the sync surface (`block_on`) and the async surface
# (`future_into_py`), so the binding owns exactly one runtime. Tracks pyo3 0.29.
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
# The Rust core. Exact pin ŌĆö the binding tracks API/behaviour churn deliberately,
# not transitively (a 2.0.0 was published then yanked upstream; pin guards us).
#
# Features are listed EXPLICITLY with `default-features = false`, so a change to
# the crate's default set can never silently alter our public surface:
#   - process-control ŌĆö `ProcessGroup.signal/suspend/resume/members` (the crate's
#     own default; pure code, no extra deps). Listed so it stays on regardless.
#   - limits ŌĆö `ResourceLimits` (`max_memory`/`max_processes`/`cpu_quota`); implies
#     `stats` (`ProcessGroupStats`, `RunningProcess.cpu_time`/`peak_memory_bytes`,
#     `profile()` / `RunProfile`).
#   - record ŌĆö the `RecordReplayRunner` cassette double (pulls serde/serde_json).
#   - tracing ŌĆö lets the crate emit a per-run tracing event, which the opt-in
#     `enable_logging()` bridges to Python's `logging` (see src/logging.rs).
# Deliberately NOT enabled: `mock` ŌĆö a Rust-only `mockall` `MockRunner` for Rust
# tests; it has no Python value (the Python test doubles come from the crate's
# always-on `doubles` surface ŌĆö ScriptedRunner / RecordingRunner ŌĆö plus the
# `record`-gated cassette RecordReplayRunner enabled above).
processkit = { version = "=1.2.0", default-features = false, features = [
  "process-control",
  "limits",
  "record",
  "tracing",
] }
# `rt-multi-thread` for the managed runtime; `time`/`sync` are used directly by
# the binding (`tokio::time::timeout` in runtime.rs, `tokio::sync::Mutex` in
# running.rs); `fs` backs the `stdout_tee`/`stderr_tee` file sinks
# (`tokio::fs::File::from_std` in convert.rs ŌĆö writes dispatched to the runtime's
# blocking pool). Declared explicitly so they don't ride silently on whatever
# `pyo3-async-runtimes` happens to enable.
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "fs"] }
# Bridge the crate's `tracing` events to Python `logging` via the opt-in
# `enable_logging()` (src/logging.rs). `registry` is the only `tracing-subscriber`
# piece we need (a `Layer` over its span store); the heavy fmt/env-filter/ansi
# default features stay off to keep wheels lean.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }

[profile.release]
lto = true
codegen-units = 1
# Strip debuginfo/symbols from release wheels (smaller artifacts); deliberately
# NOT `panic = "abort"` ŌĆö PyO3 needs unwinding to convert a Rust panic into a
# Python exception instead of aborting the whole interpreter.
strip = "symbols"
