[build-system]
requires = ["maturin>=1.14.1,<2.0"]
build-backend = "maturin"

# Distribution (PyPI) name is `processkit-py` — the bare `processkit` is already
# taken on PyPI. The import name stays `processkit` (the package dir + the
# module-name below): `pip install processkit-py` -> `import processkit`.
[project]
name = "processkit-py"
version = "1.0.0"
description = "Python bindings to the processkit Rust crate — asyncio-native, no-orphan process containment"
readme = "README.md"
# abi3 wheels (cp310+): Python 3.9 reached EOL October 2025; dev tools (mypy>=2.1) require 3.10+.
# Local dev is pinned to 3.12 via .python-version.
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Anton Zhelezniakou", email = "github@zelanton.net" }]
keywords = ["process", "subprocess", "asyncio", "containment", "pyo3"]
# No "License ::" classifier — the SPDX `license` field above is the PEP 639 form.
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Framework :: AsyncIO",
  "Topic :: System :: Systems Administration",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = []

# Autoload the pytest plugin (testing-seam fixtures + the `no_real_spawn` guard)
# in any pytest session where processkit is installed. The plugin module is pure
# Python and import-safe; pytest is not a runtime dependency (the entry point is
# only consulted by pytest, which is present exactly when the plugin is loaded).
[project.entry-points.pytest11]
processkit = "processkit.pytest_plugin"

[project.urls]
Homepage = "https://zelanton.github.io/processkit/"
Repository = "https://github.com/ZelAnton/processkit-py"
Documentation = "https://github.com/ZelAnton/processkit-py/tree/main/docs"
Changelog = "https://github.com/ZelAnton/processkit-py/blob/main/CHANGELOG.md"
Issues = "https://github.com/ZelAnton/processkit-py/issues"

[dependency-groups]
dev = [
  "maturin>=1.14.1,<2.0",
  "pytest>=9.1.1",
  "mypy>=2.1.0",
  "ruff>=0.15.20",
  "pre-commit>=4.0.0",
  "pytest-timeout>=2.4.0",
  "pytest-xdist>=3.8.0",
  "hypothesis>=6.156.1",
]
# The mkdocs toolchain, split out of `dev` so the Docs CI job's `uv run --group
# docs` rides the locked `uv.lock` tree (reproducible, cached) instead of an
# unlocked `uvx --with`. `mkdocstrings[python]` renders the API reference from
# the type stub + docstrings via griffe's *static* (AST) analysis — the Docs CI
# job builds with `--no-install-project`, so the compiled `_processkit`
# extension is never importable; `allow_inspection: false` in mkdocs.yml keeps
# griffe reading `_processkit.pyi` (and the pure-Python shim modules) instead.
docs = [
  "mkdocs-material>=9,<10",
  "mkdocstrings[python]>=0.27,<1",
  # mkdocstrings renders each callable's signature in a formatted code block
  # (`separate_signature: true`); it uses Ruff to format it when present. Ruff
  # is already a `dev` gate here — pinning it into `docs` too keeps the
  # published API-reference signatures readable (multi-line for the wide
  # `Supervisor(...)` / `CliClient(...)` constructors) instead of one long line.
  "ruff>=0.15.20",
]

[tool.maturin]
# Build abi3 wheels (cp310+) to keep the wheel matrix flat across Python versions.
# module-name places the compiled extension at src/processkit/_processkit.pyd — inside
# the Python package so __init__.py can import from `._processkit`.
# bindings = "pyo3" is explicit (maturin auto-detects, but explicit avoids sdist ambiguity).
# features activates the Cargo `extension-module` feature defined in Cargo.toml [features].
bindings = "pyo3"
module-name = "processkit._processkit"
python-source = "src"
features = ["extension-module"]
# Keep the sdist lean and on-topic: drop the 3 MB README cover art (referenced by
# an absolute URL, never needed to build) and the CI/dev-harness metadata — both
# now live under `.github/`, so the one glob below excludes them (previously two
# separate root-level entries, "cover.png" and "release-token-bypass.md"). src/,
# tests/, docs/, and the standard manifests still ship so a source build (and
# downstream testing) works.
exclude = [
  ".github/**/*",
  "docker/**/*",
  "compose.yaml",
  ".dockerignore",
  # Internal planning / session-handoff docs and agent-instruction files. They
  # live only in a local commit and never reach `main`, but exclude them here
  # too so they can never slip into a source dist from any build tree
  # (belt-and-braces, like `.github/**/*`) — verified they otherwise DO leak
  # (built an sdist from a tree where these happened to be tracked; every one
  # of them showed up in the tarball before this list covered them).
  "progress.md",
  "*-plan.md",
  ".work/**/*",
  "AGENTS.md",
  "CLAUDE.md",
  "CLAUDE.local.md",
  ".claude/**/*",
]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
files = ["src", "tests", "scripts"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
# `-n auto` (pytest-xdist): the suite is dominated by sequential interpreter
# spawns (each test's own subprocess round trip), so it's embarrassingly
# parallel across worker processes — each test is already independent (no
# shared global state survives a process boundary; env-mutating tests use
# monkeypatch, not raw os.environ, since Stage 1).
addopts = "-ra --strict-markers --strict-config --import-mode=importlib -n auto"
filterwarnings = ["error"]
testpaths = ["tests"]
# The repo root on sys.path so tests can `import scripts.release.*` (the
# release.yml helper scripts) as an ordinary absolute import, alongside the
# installed `processkit` package.
pythonpath = ["."]
# Global hang guard (pytest-timeout): a sync-path regression (e.g. a
# consuming verb that blocks forever instead of raising) would otherwise hang
# CI to the job-level timeout instead of failing the one test that broke.
# 60s is generous against the slowest real test (well under 2s today) while
# still bounding a genuine hang. `thread` (the default method) works
# cross-platform, unlike `signal` (POSIX-only, and this suite runs on Windows).
timeout = 60
timeout_method = "thread"

[tool.cibuildwheel]
# Two wheel families per OS/arch:
#   * cp310-*   → one abi3 wheel that runs on every GIL CPython 3.10+ (incl. 3.14),
#                 so the GIL matrix stays a single wheel instead of one per version.
#   * cp314t-*  → free-threaded CPython (PEP 703), officially supported as of 3.14.
#                 The limited API (abi3) is unavailable on free-threaded builds, so
#                 maturin emits a version-specific wheel. (cibuildwheel ships only
#                 the officially-supported free-threaded interpreter, 3.14t — there
#                 is no cp313t build; 3.13's free-threaded build was experimental.)
build = "cp310-* cp314t-*"
# Build both glibc (manylinux) and musl (musllinux) Linux wheels — Alpine/musl is
# common in containers. 32-bit musl has no Rust/Cargo, and 32-bit Windows is not a
# target. Each matrix runner builds its own native arch. The stock pypa
# musllinux_1_2 image already ships cc + musl-dev, and maturin auto-sets
# `-C target-feature=-crt-static` for the musl cdylib, so no extra build setup.
skip = "*-musllinux_i686 *-win32"
# Smoke-test the actual built wheel on each platform (see scripts/smoke.py).
test-command = "python {project}/scripts/smoke.py"

[tool.cibuildwheel.macos]
# Cross-compile Intel (x86_64) alongside the runner's native arm64: GitHub
# retired the free `macos-13` Intel runner, but Rust cross-compiles
# darwin-x86_64 from an arm64 host trivially (the `_build-dists.yml` workflow
# adds the `x86_64-apple-darwin` rustup target before this runs).
archs = ["arm64", "x86_64"]

[tool.cibuildwheel.linux]
# The manylinux/musllinux build containers ship no Rust toolchain — install a
# current stable (>= the crate's MSRV) before building. On Windows/macOS the
# runner's own toolchain (dtolnay/rust-toolchain) is used instead.
# The `--component` flags match rust-toolchain.toml so the fresh toolchain
# already satisfies it: otherwise rustup tries to add those components
# mid-build (when maturin first runs cargo), which has intermittently raced into a
# `bin/cargo-fmt` install conflict in the musl container. Installing them once, up
# front on a clean toolchain, closes that window (the build itself never runs
# fmt/clippy).
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal --default-toolchain stable --component rustfmt --component clippy"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }
