[build-system]
requires = ["maturin>=1.14.1,<2.0"]
build-backend = "maturin"

# Distribution (PyPI) name is `processkit-py` — the bare `processkit` is already
# taken on PyPI. The import name stays `processkit` (the package dir + the
# module-name below): `pip install processkit-py` -> `import processkit`.
[project]
name = "processkit-py"
version = "1.2.3"
description = "Python bindings to the processkit Rust crate — asyncio-native, no-orphan process containment"
readme = "README.md"
# abi3 wheels (cp310+): Python 3.9 reached EOL October 2025; dev tools (mypy>=2.1) require 3.10+.
# Local dev is pinned to 3.12 via .python-version.
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Anton Zhelezniakou", email = "github@zelanton.net" }]
keywords = ["process", "subprocess", "asyncio", "containment", "pyo3"]
# No "License ::" classifier — the SPDX `license` field above is the PEP 639 form.
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Framework :: AsyncIO",
  "Topic :: System :: Systems Administration",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = []

# Autoload the pytest plugin (testing-seam fixtures + the `no_real_spawn` guard)
# in any pytest session where processkit is installed. The plugin module is pure
# Python and import-safe; pytest is not a runtime dependency (the entry point is
# only consulted by pytest, which is present exactly when the plugin is loaded).
[project.entry-points.pytest11]
processkit = "processkit.pytest_plugin"

[project.urls]
Homepage = "https://zelanton.github.io/processkit/"
Repository = "https://github.com/ZelAnton/processkit-py"
Documentation = "https://zelanton.github.io/processkit-py/"
Changelog = "https://github.com/ZelAnton/processkit-py/blob/main/CHANGELOG.md"
Issues = "https://github.com/ZelAnton/processkit-py/issues"

[dependency-groups]
dev = [
  "maturin>=1.14.1,<2.0",
  "pytest>=9.1.1",
  "mypy>=2.1.0",
  "ruff>=0.15.20",
  "pre-commit>=4.0.0",
  "pytest-timeout>=2.4.0",
  "pytest-xdist>=3.8.0",
  "pytest-cov>=7.0.0",
  "hypothesis>=6.156.1",
  # `griffe` (distribution `griffelib`) statically analyses the type stub
  # (`_processkit.pyi`) and the pure-Python shims for scripts/gen_api_reference.py,
  # which renders docs/api-reference.md as static Markdown. Needed here (not in a
  # docs-only group) because the drift guard tests/test_api_reference.py runs in
  # the ordinary `uv run pytest` gate. The mdBook docs build itself uses no Python.
  "griffelib>=2,<3",
]
# The `benchmarks/` suite (overhead vs `subprocess`/`asyncio.subprocess`,
# `ProcessGroup` start/exit, line-streaming throughput, `output_all` at
# varying concurrency) — split out of `dev` so it never installs (or runs) in
# the PR gate; only the scheduled `nightly-hardening.yml` job installs this
# group. See `benchmarks/README.md` for how to run it locally.
bench = [
  "pytest-benchmark>=5,<6",
]
# Event-loop compatibility matrix for `tests/test_event_loops.py` — turns
# docs/event-loops.md's "uvloop and anyio-on-asyncio are fully supported"
# claim into a checked contract. Split out of `dev` so the ordinary PR-gate
# `test` job (and every plain `uv run pytest`) never needs these installed;
# only the dedicated `event-loops` CI job (`--group event-loops`) does.
# uvloop ships no Windows wheels (and has none planned), so it is marked
# Windows-incompatible here via an environment marker — `uv sync --group
# event-loops` on Windows installs anyio only, and the uvloop-parametrized
# tests skip themselves (see tests/test_event_loops.py).
event-loops = [
  "uvloop>=0.21.0,<1; sys_platform != 'win32'",
  "anyio>=4.0,<5",
]

[tool.maturin]
# Build abi3 wheels (cp310+) to keep the wheel matrix flat across Python versions.
# module-name places the compiled extension at src/processkit/_processkit.pyd — inside
# the Python package so __init__.py can import from `._processkit`.
# bindings = "pyo3" is explicit (maturin auto-detects, but explicit avoids sdist ambiguity).
# features activates the Cargo `extension-module` feature defined in Cargo.toml [features].
bindings = "pyo3"
module-name = "processkit._processkit"
python-source = "src"
features = ["extension-module"]
# Keep the sdist lean and on-topic: drop the 3 MB README cover art (referenced by
# an absolute URL, never needed to build) and the CI/dev-harness metadata — both
# now live under `.github/`, so the one glob below excludes them (previously two
# separate root-level entries, "cover.png" and "release-token-bypass.md"). src/,
# tests/, docs/, and the standard manifests still ship so a source build (and
# downstream testing) works.
exclude = [
  ".github/**/*",
  "docker/**/*",
  "compose.yaml",
  ".dockerignore",
  # Internal planning / session-handoff docs and agent-instruction files. They
  # live only in a local commit and never reach `main`, but exclude them here
  # too so they can never slip into a source dist from any build tree
  # (belt-and-braces, like `.github/**/*`) — verified they otherwise DO leak
  # (built an sdist from a tree where these happened to be tracked; every one
  # of them showed up in the tarball before this list covered them).
  "progress.md",
  "*-plan.md",
  ".work/**/*",
  "AGENTS.md",
  "CLAUDE.md",
  "CLAUDE.local.md",
  ".claude/**/*",
]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts", "examples"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
files = ["src", "tests", "scripts", "examples"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
# `-n auto` (pytest-xdist): the suite is dominated by sequential interpreter
# spawns (each test's own subprocess round trip), so it's embarrassingly
# parallel across worker processes — each test is already independent (no
# shared global state survives a process boundary; env-mutating tests use
# monkeypatch, not raw os.environ, since Stage 1).
addopts = "-ra --strict-markers --strict-config --import-mode=importlib -n auto"
filterwarnings = [
  "error",
  # pytest-benchmark (the `bench` dependency-group, autoloaded as a pytest11
  # plugin whenever installed — not scoped to `benchmarks/`) warns once at
  # configure time that it is disabling itself under `-n auto`/xdist, which
  # is exactly this suite's default (see the addopts comment above). Harmless
  # here — nothing in `tests/` uses the `benchmark` fixture — but without this
  # one narrow ignore, a dev environment with `bench` installed alongside
  # `dev` would turn that benign self-disabling notice into a hard
  # INTERNALERROR on every ordinary `pytest` run, via the blanket
  # "error"-on-any-warning rule below. Matched by message text (not by
  # `category:module` — e.g. `pytest_benchmark.logger.PytestBenchmarkWarning`)
  # so pytest never has to `importlib.import_module("pytest_benchmark.*")` to
  # resolve the filter: in a `dev`-only environment (no `bench` group, e.g.
  # the ordinary PR-gate `uv run pytest`) that import fails, and pytest turns
  # the resulting `PytestConfigWarning: Failed to import filter module ...`
  # into the exact `INTERNALERROR` this filter exists to prevent.
  "ignore:Benchmarks are automatically disabled because xdist plugin is active",
]
testpaths = ["tests"]
# The repo root on sys.path so tests can `import scripts.release.*` (the
# release.yml helper scripts) as an ordinary absolute import, alongside the
# installed `processkit` package.
pythonpath = ["."]
# Global hang guard (pytest-timeout): a sync-path regression (e.g. a
# consuming verb that blocks forever instead of raising) would otherwise hang
# CI to the job-level timeout instead of failing the one test that broke.
# 60s is generous against the slowest real test (well under 2s today) while
# still bounding a genuine hang. `thread` (the default method) works
# cross-platform, unlike `signal` (POSIX-only, and this suite runs on Windows).
timeout = 60
timeout_method = "thread"

[tool.coverage.run]
# Coverage is deliberately scoped to the *pure-Python* surface only: the
# hand-written `src/processkit/*.py` modules (the public API shim, the async
# helpers, the pytest plugin, the testing doubles) plus the release tooling in
# `scripts/release/`. The compiled `_processkit` extension (the PyO3/Rust
# binding) is native code — coverage.py has no way to instrument it, and
# couldn't even if asked to: it is exercised (indirectly, through every test
# that calls into `Command`/`ProcessGroup`/etc.) but its *own* line/branch
# coverage is tracked by the `processkit` Rust crate's own test suite, not
# here. Nothing needs to be listed in `omit` for it (there is no `.py` file to
# match — `_processkit.pyi` is a stub, never imported, so coverage.py never
# sees it) but this comment exists so the percentage below is never read as
# "how well the Rust core is tested".
source = ["src/processkit", "scripts/release"]
branch = true
# One data file per pytest-xdist worker (`.coverage.<host>.<pid>.<rand>`),
# combined by pytest-cov at session end — without this, concurrent workers
# racing to write the same `.coverage` file would silently under-report
# (last writer wins instead of a proper union of all workers' lines).
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.cibuildwheel]
# Two wheel families per OS/arch:
#   * cp310-*   → one abi3 wheel that runs on every GIL CPython 3.10+ (incl. 3.14),
#                 so the GIL matrix stays a single wheel instead of one per version.
#   * cp314t-*  → free-threaded CPython (PEP 703), officially supported as of 3.14.
#                 The limited API (abi3) is unavailable on free-threaded builds, so
#                 maturin emits a version-specific wheel. (cibuildwheel ships only
#                 the officially-supported free-threaded interpreter, 3.14t — there
#                 is no cp313t build; 3.13's free-threaded build was experimental.)
build = "cp310-* cp314t-*"
# Build both glibc (manylinux) and musl (musllinux) Linux wheels — Alpine/musl is
# common in containers. 32-bit musl has no Rust/Cargo, and 32-bit Windows is not a
# target. Each matrix runner builds its own native arch. The stock pypa
# musllinux_1_2 image already ships cc + musl-dev, and maturin auto-sets
# `-C target-feature=-crt-static` for the musl cdylib, so no extra build setup.
skip = "*-musllinux_i686 *-win32"
# Smoke-test the actual built wheel on each platform (see scripts/smoke.py).
test-command = "python {project}/scripts/smoke.py"

[tool.cibuildwheel.macos]
# Cross-compile Intel (x86_64) alongside the runner's native arm64: GitHub
# retired the free `macos-13` Intel runner, but Rust cross-compiles
# darwin-x86_64 from an arm64 host trivially (the `_build-dists.yml` workflow
# adds the `x86_64-apple-darwin` rustup target before this runs).
#
# Known, accepted gap: `test-command` (scripts/smoke.py) needs Rosetta 2 to
# execute the x86_64 interpreter on the arm64 (macos-14) runner, and this repo
# does not install Rosetta before the build. There is no free GitHub-hosted
# Intel macOS runner left to run a native x86_64 smoke test either. So the
# x86_64 wheel is built and shipped without a post-build import/exec smoke
# check — it relies on the arm64 build's smoke test (same source, same
# `[extension-module]` build) plus the CodeQL/pip-audit/rust-audit gates for
# confidence. If a free arm64 GitHub runner with Rosetta preinstalled becomes
# available, or a native Intel macOS runner returns, revisit this.
archs = ["arm64", "x86_64"]

[[tool.cibuildwheel.overrides]]
# Without this, maturin tags the x86_64 wheel `macosx_10_9` (the old default),
# but current Rust toolchains link `x86_64-apple-darwin` binaries with an
# embedded minimum target of 10.12 — delocate then refuses to repair the
# wheel ("Library dependencies do not satisfy target MacOS version 10.9").
# Pinning the env var makes maturin tag the wheel to match what the linker
# actually produced. Scoped to x86_64 only: the arm64 build's own minimum
# (11.0, since Apple Silicon shipped no earlier macOS) already matches its
# wheel tag without this override.
select = "*-macosx_x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.12" }

[tool.cibuildwheel.linux]
# The manylinux/musllinux build containers ship no Rust toolchain — install a
# current stable (>= the crate's MSRV) before building. On Windows/macOS the
# runner's own toolchain (dtolnay/rust-toolchain) is used instead.
# The `--component` flags match rust-toolchain.toml so the fresh toolchain
# already satisfies it: otherwise rustup tries to add those components
# mid-build (when maturin first runs cargo), which has intermittently raced into a
# `bin/cargo-fmt` install conflict in the musl container. Installing them once, up
# front on a clean toolchain, closes that window (the build itself never runs
# fmt/clippy).
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal --default-toolchain stable --component rustfmt --component clippy"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }
